# learn-rag-agentic-azure

./: .gitignore  01-document-upload.ipynb  02-retrieval-agent.ipynb  03-retrieval-as-a-tool.ipynb  04-improve-retrieval-agent-hyde.ipynb  README.md  document-upload.ipynb  env.example  main.py  pyproject.toml
documents/: LICENSE.txt
