[project]
name = "learn-rag-agentic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.0",
    "azure-keyvault-secrets>=4.10.0",
    "azure-search>=1.0.0b2",
    "azure-search-documents>=11.5.3",
    "jupyterlab>=4.4.7",
    "langchain-community>=0.3.29",
    "langchain-openai>=0.3.33",
    "langchain-text-splitters>=0.3.11",
    "langchain[openai]>=0.3.27",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-sqlite>=2.0.11",
    "openai>=1.107.2",
    "pymupdf>=1.26.4",
    "python-dotenv>=1.1.1",
]
